--- a/index.html
+++ b/index.html
@@ -125,6 +125,108 @@
         </div>
 
       </div>
+    <div class="cards">
+        <div class="car-card">
+    <img height="100" src="xjl-removebg-preview.png" alt="Jaguar XE L P250" class="car-img">
+
+    <h3 class="car-name">Jaguar XE L P250</h3>
+
+    <div class="rating">
+      <i class="fa-solid fa-star"></i>
+      <span>4.8</span>
+      <p>(2,436 reviews)</p>
+    </div>
+
+    <div class="car-details">
+      <div><i class="fa-solid fa-user-group"></i> 4 Passengers</div>
+      <div><i class="fa-solid fa-gears"></i> Auto</div>
+      <div><i class="fa-regular fa-snowflake"></i> Air Conditioning</div>
+      <div><i class="fa-solid fa-door-closed"></i> 4 Doors</div>
+    </div>
+
+    <div class="price">
+      <p>Price</p>
+      <h2>$1,800 <span>/day</span></h2>
+    </div>
+
+    <button class="rent-btn">Rent Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div class="car-card">
+    <img height="100" src="Screenshot_2025-10-15_103514-removebg-preview.png" alt="Jaguar XE L P250" class="car-img">
+
+    <h3 class="car-name">PORSHE</h3>
+
+    <div class="rating">
+      <i class="fa-solid fa-star"></i>
+      <span>4.3</span>
+      <p>(5,134 reviews)</p>
+    </div>
+
+    <div class="car-details">
+      <div><i class="fa-solid fa-user-group"></i> 2 Passengers</div>
+      <div><i class="fa-solid fa-gears"></i> Auto</div>
+      <div><i class="fa-regular fa-snowflake"></i> Air Conditioning</div>
+      <div><i class="fa-solid fa-door-closed"></i> 4 Doors</div>
+    </div>
+
+    <div class="price">
+      <p>Price</p>
+      <h2>$3,120 <span>/day</span></h2>
+    </div>
+
+    <button class="rent-btn">Rent Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div class="car-card">
+    <img height="120" src="lambo-removebg-preview.png" alt="Jaguar XE L P250" class="car-img">
+
+    <h3 class="car-name">LAMBORGHINI</h3>
+
+    <div class="rating">
+      <i class="fa-solid fa-star"></i>
+      <span>4.8</span>
+      <p>(2,436 reviews)</p>
+    </div>
+
+    <div class="car-details">
+      <div><i class="fa-solid fa-user-group"></i> 2 Passengers</div>
+      <div><i class="fa-solid fa-gears"></i> Auto</div>
+      <div><i class="fa-regular fa-snowflake"></i> Air Conditioning</div>
+      <div><i class="fa-solid fa-door-closed"></i> 4 Doors</div>
+    </div>
+
+    <div class="price">
+      <p>Price</p>
+      <h2>$3,000 <span>/day</span></h2>
+    </div>
+
+    <button class="rent-btn">Rent Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div class="car-card">
+    <img height="100" src="m4-removebg-preview.png" alt="Jaguar XE L P250" class="car-img">
+
+    <h3 class="car-name">BMW</h3>
+
+    <div class="rating">
+      <i class="fa-solid fa-star"></i>
+      <span>5</span>
+      <p>(3,132 reviews)</p>
+    </div>
+
+    <div class="car-details">
+      <div><i class="fa-solid fa-user-group"></i> 4 Passengers</div>
+      <div><i class="fa-solid fa-gears"></i> Auto</div>
+      <div><i class="fa-regular fa-snowflake"></i> Air Conditioning</div>
+      <div><i class="fa-solid fa-door-closed"></i> 4 Doors</div>
+    </div>
+
+    <div class="price">
+      <p>Price</p>
+      <h2>$2,800 <span>/day</span></h2>
+    </div>
+
+    <button class="rent-btn">Rent Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+      </div>
   </main>
   <br><br><br>
   <footer class="site-footer">
@@ -202,4 +304,5 @@
   
   <script src="script.js"></script>
 </body>
+
 </html>
