--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="mediaQuerries.css">
 </head>
 <body>
   <header>
@@ -306,3 +307,4 @@
 </body>
 
 </html>
+
