--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
         </div>
 
       </div>
+    <br><br><br>
+      <hr style="margin-left: 4em; margin-right: 4em;">
+      <br><br><br>
+    <div class="works">
+      <button style="color: blue; ">Popular Rental Cars</button>
+    </div>
+
+    <br><br>
+      <h1 style="text-align: center; font-size: 2.5em; font-weight: 600;letter-spacing: 1px;">Most popular cars rental deals</h1>
     <div class="cards">
         <div class="car-card">
     <img height="100" src="xjl-removebg-preview.png" alt="Jaguar XE L P250" class="car-img">
@@ -307,4 +316,5 @@
 </body>
 
 </html>
+
 
